card gap fix

--- a/src/components/Banner/banner.css
+++ b/src/components/Banner/banner.css
@@ -48,6 +48,6 @@
   }
   .banner-text {
     font-size: 24px;
-    padding: 0 70px 0 16px;
+    padding: 0 85px 0 16px;
   }
 }
