--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -40,6 +40,8 @@
   @media only screen and (max-width: 376px) {
     .rental-cards {
       grid-template-columns: repeat(1, 335px);
+      row-gap: 20px;
+      background-color: white;    
     } 
     .card {
       height: 255px;
